0.57 - fixed an overloaded virtual function error in sqlr-status
	fixed parsing of "term as type" clauses in queries
	fixed 0 vs. None error in python getRowDictionary method
	tweaked php and php_pdo modules to build with php 5.6.0 on windows
	updated deployment projects for windows, adding perl, php, python
		and java, and adding x64 support

0.56 - removed VERSION from perl api bootstrap
	reorganized and simplified perl api code
	got perl api working on windows with ActivePerl
	perl api uninstall cleans up better now
	got python api working on windows with ActivePython
	consolidated php include tweaks
	got java api working on windows
	updated pdo driver to convert float fields to strings rather than ints
	updated pthread test to match rudiments pthread test
	moved everything done by children of sqlwriter interface into
		individual translations
	added plugin-based authentication framework
	reorganized code tree a bit
	reworked default values to enable more minimal configurations
	updated configuration docs and added configuration guide
	fixed cast issue with firebird 1.5
	added result set translation framework and re-implemented date
		translation using it
	fixed millisecond->nanosecond confusion in sqlr-scaler
	fixed subtle oracle instantclient version detection bug
	added null input bind support to sqlrsh
	fixed php pdo driver to return null rather than 0 for null integer
		fields and bind null rather than 0 for null integer input
		binds
	added attribute to return nulls as nulls or empty strings to php pdo
	added parameters for connecting to mysql via ssl
	added a few tweaks to support DB2 < 8.0
	fixed bad return value type in python getConnectionPort method
	fixed sessionhandler="thread" with listenertimeout!="0"

0.55 - fixed a sql translation bug related to exists clauses
	added deployment projects for windows
	tweaked make.batch install target to install 32-bit files under
		C:\Program Files (x86)
	added a timeout parameter to db2 and odbc connect strings