@@ -121,7 +121,8 @@ class DLLSPEC oracle8connection : public sqlrconnection_svr {
 		const char	*getDatabaseListQuery(bool wild);
 		const char	*getTableListQuery(bool wild);
 		const char	*getColumnListQuery(const char *table,
-								bool wild);
+							bool wild,
+							uint16_t *tablecount);
 		const char	*selectDatabaseQuery();
 		const char	*getCurrentDatabaseQuery();
 		const char	*getLastInsertIdQuery();
@@ -1180,8 +1181,224 @@ const char *oracle8connection::getTableListQuery(bool wild) {
 }
 
 const char *oracle8connection::getColumnListQuery(const char *table,
-								bool wild) {
+							bool wild,
+							uint16_t *tablecount) {
+
+	// the table name will have to be inserted twice in this query
+	*tablecount=2;
+
 	if (supportssyscontext) {
+		return (wild)?
+			"select "
+			"	column_name, "
+			"	data_type, "
+			"	data_length, "
+			"	data_precision, "
+			"	data_scale, "
+			"	nullable, "
+			"	'' as key, "
+			"	data_default, "
+			"	'' as extra "
+			"from "
+			"	all_tab_columns, "
+			"	(select "
+			"		owner, "
+			"		table_name "
+			"	from "
+			"		((select "
+			"			owner, "
+			"			table_name "
+			"		from "
+			"			all_tables "
+			"		where "
+			"			table_name=upper('%s') "
+			"			and "
+			"			(owner=sys_context( "
+			"				'userenv', "
+			"				'current_schema') "
+			"			or "
+			"			owner='SYS' "
+			"			or "
+			"			owner='SYSTEM')) "
+			"		union "
+			"		(select "
+			"			table_owner as owner, "
+			"			table_name "
+			"		from "
+			"			all_synonyms "
+			"		where "
+			"			synonym_name="
+			"				upper('%s') "
+			"			and "
+			"			(owner=sys_context( "
+			"				'userenv', "
+			"				'current_schema') "
+			"			or "
+			"			owner='SYS' "
+			"			or "
+			"			owner='SYSTEM')))) "
+			"		tables "
+			"where "
+			"	all_tab_columns.table_name="
+			"			tables.table_name "
+			"	and "
+			"	all_tab_columns.owner=tables.owner "
+			"	and "
+			"	all_tab_columns.column_name like "
+			"			upper('%s') "
+			"order by "
+			"	column_id ":
+
+			"select "
+			"	column_name, "
+			"	data_type, "
+			"	data_length, "
+			"	data_precision, "
+			"	data_scale, "
+			"	nullable, "
+			"	'' as key, "
+			"	data_default, "
+			"	'' as extra "
+			"from "
+			"	all_tab_columns, "
+			"	(select "
+			"		owner, "
+			"		table_name "
+			"	from "
+			"		((select "
+			"			owner, "
+			"			table_name "
+			"		from "
+			"			all_tables "
+			"		where "
+			"			table_name=upper('%s') "
+			"			and "
+			"			(owner=sys_context( "
+			"				'userenv', "
+			"				'current_schema') "
+			"			or "
+			"			owner='SYS' "
+			"			or "
+			"			owner='SYSTEM')) "
+			"		union "
+			"		(select "
+			"			table_owner as owner, "
+			"			table_name "
+			"		from "
+			"			all_synonyms "
+			"		where "
+			"			synonym_name="
+			"				upper('%s') "
+			"			and "
+			"			(owner=sys_context( "
+			"				'userenv', "
+			"				'current_schema') "
+			"			or "
+			"			owner='SYS' "
+			"			or "
+			"			owner='SYSTEM')))) "
+			"		tables "
+			"where "
+			"	all_tab_columns.table_name="
+			"			tables.table_name "
+			"	and "
+			"	all_tab_columns.owner=tables.owner "
+			"order by "
+			"	column_id ";
+	} else {
+		return (wild)?
+			"select "
+			"	column_name, "
+			"	data_type, "
+			"	data_length, "
+			"	data_precision, "
+			"	data_scale, "
+			"	nullable, "
+			"	'' as key, "
+			"	data_default, "
+			"	'' as extra "
+			"from "
+			"	all_tab_columns, "
+			"	(select "
+			"		owner, "
+			"		table_name "
+			"	from "
+			"		((select "
+			"			owner, "
+			"			table_name "
+			"		from "
+			"			all_tables "
+			"		where "
+			"			table_name=upper('%s') "
+			"		) "
+			"		union "
+			"		(select "
+			"			table_owner as owner, "
+			"			table_name "
+			"		from "
+			"			all_synonyms "
+			"		where "
+			"			synonym_name="
+			"				upper('%s') "
+			"		))) "
+			"		tables "
+			"where "
+			"	all_tab_columns.table_name="
+			"			tables.table_name "
+			"	and "
+			"	all_tab_columns.owner=tables.owner "
+			"	and "
+			"	all_tab_columns.column_name like "
+			"			upper('%s') "
+			"order by "
+			"	column_id ":
+
+			"select "
+			"	column_name, "
+			"	data_type, "
+			"	data_length, "
+			"	data_precision, "
+			"	data_scale, "
+			"	nullable, "
+			"	'' as key, "
+			"	data_default, "
+			"	'' as extra "
+			"from "
+			"	all_tab_columns, "
+			"	(select "
+			"		owner, "
+			"		table_name "
+			"	from "
+			"		((select "
+			"			owner, "
+			"			table_name "
+			"		from "
+			"			all_tables "
+			"		where "
+			"			table_name=upper('%s') "
+			"		) "
+			"		union "
+			"		(select "
+			"			table_owner as owner, "
+			"			table_name "
+			"		from "
+			"			all_synonyms "
+			"		where "
+			"			synonym_name="
+			"				upper('%s') "
+			"		))) "
+			"		tables "
+			"where "
+			"	all_tab_columns.table_name="
+			"			tables.table_name "
+			"	and "
+			"	all_tab_columns.owner=tables.owner "
+			"order by "
+			"	column_id ";
+	}
+
+	// old code from before synonyms were checked
+	/*if (supportssyscontext) {
 		return (wild)?
 			"select "
 			"	column_name, "
@@ -1200,7 +1417,8 @@ const char *oracle8connection::getColumnListQuery(const char *table,
 			"	and "
 			"	column_name like upper('%s') "
 			"	and "
-			"	(owner=sys_context('userenv','current_schema') "
+			"	(owner=sys_context('userenv', "
+			"			'current_schema') "
 			"	or "
 			"	owner='SYS' "
 			"	or "
@@ -1223,7 +1441,8 @@ const char *oracle8connection::getColumnListQuery(const char *table,
 			"where "
 			"	table_name=upper('%s') "
 			"	and "
-			"	(owner=sys_context('userenv','current_schema') "
+			"	(owner=sys_context('userenv', "
+			"			'current_schema') "
 			"	or "
 			"	owner='SYS' "
 			"	or "
@@ -1267,7 +1486,7 @@ const char *oracle8connection::getColumnListQuery(const char *table,
 			"	table_name=upper('%s') "
 			"order by "
 			"	column_id";
-	}
+	}*/
 }
 
 const char *oracle8connection::selectDatabaseQuery() {
