@@ -146,7 +146,8 @@ class SQLRSERVER_DLLSPEC sqlrclientprotocol : public sqlrprotocol {
 		bool	buildListQuery(sqlrcursor_svr *cursor,
 						const char *query,
 						const char *wild,
-						const char *table);
+						const char *table,
+						uint16_t tablecount);
 		void	escapeParameter(stringbuffer *buffer,
 						const char *parameter);
 		bool	getQueryTreeCommand(sqlrcursor_svr *cursor);
